# kamut

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  architecture.md  combined-kamut.yaml  example-kamut.yaml  metadata.json  spec.md
.github/workflows/: ci.yml.disabled  release.yml
examples/: deploy-with-replicas.kamut.yaml  deploy-with-replicas.yaml  deploy.kamut.yaml  deploy.yaml  deployment-test.kamut.yaml  deployment-test.yaml  prom-no-retention.kamut.yaml  prom-no-retention.yaml  prom-with-ingress.kamut.yaml  prom-with-ingress.yaml  prom.kamut.yaml  prom.yaml  prometheus-self.kamut.yaml  prometheus-self.yaml  scrapeconfig.kamut.yaml  scrapeconfig.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  models.rs
tests/: cli_test.rs  config_test.rs  integration_test.rs  models_test.rs  service_account_test.rs
