[package]
name = "kamut"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
schemars = "0.8"
k8s-openapi = { version = "0.24", features = ["v1_31"] }
#kube = { version = "0.87", features = ["derive", "client"] }
kube-custom-resources-rs = { version = "2024.11.1", features = ["monitoring_coreos_com"] }

[dev-dependencies]
tempfile = "3.10"
